--- a/auta.html
+++ b/auta.html
@@ -23,10 +23,13 @@
     </div>
     <div class="prawy">
         <h3>Oferta</br>
-            <input type="radio" name="auto" id="BMW" value="BMW">BMW</br>
-            <input type="radio" name="auto" id="AUDI" value="AUDI">AUDI</br>
-            <input type="radio" name="auto" id="MALUCH" value="MALUCH">MALUCH</br>
+            <div class="content">
+                <input type="radio" name="auto" id="BMW" value="BMW">BMW</br>
+                <input type="radio" name="auto" id="AUDI" value="AUDI">AUDI</br>
+                <input type="radio" name="auto" id="MALUCH" value="MALUCH">MALUCH</br>
+            </div>
         </h3>
+
         <a href="Oferta.txt" class="a1">Pobierz pełną ofertę</a>
         <h3>Liczba dni:
             <input type="number" id="dni">
